<resources>
    <string name="error_message_date_validation">Invalid data format</string>
    <string name="error_message_id_validation">The value should be between 13 and 15 characters.</string>
    <string name="error_message_regex_validation">Invalid format</string>
    <string name="error_message_email_validation">Invalid email format</string>
    <string name="error_message_phone_email_validation">Invalid Email or Phone format</string>
    <string name="error_message_first_name_validation">Enter valid first name</string>
    <string name="error_message_last_name_validation">Invalid last name format</string>
    <string name="error_message_sur_name_validation">Enter valid  surname</string>
    <string name="error_message_name_validation">Name cannot be empty</string>
    <string name="error_message_first_name_empty">First name cannot be empty</string>
    <string name="error_message_first_name_alphabet_required">First name should start with an alphabet</string>
    <string name="error_message_surname_name_empty">Surname cannot be empty</string>
    <string name="error_message_surname_alphabet_required">Surname should start with an alphabet</string>
    <string name="error_message_special_character_not_allowed_in_name">Special characters are not allowed in name</string>
    <string name="error_message_cpf_validation">Invalid CPF format</string>
    <string name="error_message_url_validation">Invalid url format</string>
    <string name="error_message_phone_validation">Invalid phone number</string>
    <string name="error_message_otp_length">Invalid OTP length</string>
    <string name="error_message_password_length">Invalid password length</string>
    <string name="error_message_no_password_length">Please enter password</string>
    <string name="error_message_password_regex_validation">Password must be a minimum of 8 and max 20 characters long and include a combination of uppercase and lowercase letters, and numbers for increased security.</string>
    <string name="error_message_note_password_regex_validation">Note: Password must be a minimum of 8 and max 20 characters long and include a combination of uppercase and lowercase letters, and numbers for increased security.</string>
    <string name="error_message_credit_card_validation">Invalid Credit Card format</string>
    <string name="error_message_empty_validation">This field can\'t be empty</string>
    <string name="error_message_not_equal_password">Passwords are not the same</string>
    <string name="error_message_not_equal_new_password">New passwords are not same</string>
    <string name="error_message_invalid_password">Password does not meet the requirements</string>
    <string name="error_message_invalid_new_password">Password does not meet the requirements</string>
    <string name="error_message_invalid_old_password">Invalid old password</string>
    <string name="error_message_invalid_confirm_password">Confirm password does not meet the requirements</string>
    <string name="error_message_not_equal_phone">Mobile No are not the same</string>
    <string name="default_required_validation_message">This field is required.</string>
    <string name="error_message_postal_address">Postal Address is not valid</string>
    <string name="success_message_to_re_login">Password updated successfully, please re-login</string>
    <string name="default_required_length_message_min_max">The input must have length between %1$d
        and %2$d.
    </string>
    <string name="default_required_length_message_min">The input length must be greater than
        or equal to %1$d characters.
    </string>
    <string name="default_required_length_message_max">The input length must be less than or
        equal to %1$d characters.
    </string>
    <string name="default_regex_validation_message">The field value does not match the
        required format.
    </string>
    <string name="error_passcode_sequence">Passcode cannot be a straight sequence</string>
    <string name="error_passcode_same_digits">Passcode cannot be of same digits</string>
    <string name="login">Login</string>
    <string name="enter_your_username_or_email">Enter your username or email</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="don_t_have_account">Don\'t have account?</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="email_required">Email<font color="#D9000D">*</font></string>
    <string name="password">Password</string>
    <string name="password_required">Password<font color="#D9000D">*</font></string>
    <string name="confirm">Confirm</string>
    <string name="new_password">New password</string>
    <string name="reset_password">Reset Password</string>
    <string name="forgot_password_desc">Forgot your password ? Please enter your username or email address. You will receive a link by email to create a new password.</string>
    <string name="identification_email">Identification email</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_up"><u>Sign Up !</u></string>
    <string name="sign_in"><u>Sign In !</u></string>
    <string name="login_btn_text">Login</string>
    <string name="enter_your_personal_details_and_start_journey_with_us">Enter your personal details and start journey with us</string>
    <string name="welcome_to_ceibro">Welcome to Ceibro</string>
    <string name="sign_in_btn_text">Sign In</string>
    <string name="password_hint">Password</string>
    <string name="e_mail_hint">E-mail</string>
    <string name="sign_in_to_manage_your_projects_with_ceibro">Sign in to manage your projects with Ceibro</string>
    <string name="sign_in_heading">Sign In</string>
    <string name="put_your">Input</string>
    <string name="personal_details">Personal details</string>
    <string name="enter_name">Enter name</string>
    <string name="enter_surname">Enter surname</string>
    <string name="enter_e_mail">Enter e-mail</string>
    <string name="enter_password">Enter password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="confirm_password_required">Confirm password<font color="#D9000D">*</font></string>
    <string name="register">Register</string>
    <string name="profile_heading">Profile</string>
    <string name="username_hint">UserName</string>
    <string name="user_email_company_com">user.email@company.com</string>
    <string name="company_name_text">Company name</string>
    <string name="phone_number_hint">+372 5679 7470</string>
    <string name="my_connections_text">My connections</string>
    <string name="invitations_text">Invitations</string>
    <string name="edit_profile_heading">Edit Profile</string>
    <string name="personal_details_heading">Personal Details</string>
    <string name="name_heading">Name</string>
    <string name="sur_name_heading">Sur name</string>
    <string name="surname_heading">Surname</string>
    <string name="surname_required">Surname<font color="#D9000D">*</font></string>
    <string name="email_heading">Email</string>
    <string name="contact_number_heading">Contact number</string>
    <string name="password_heading">Password</string>
    <string name="confirm_password_heading">Confirm password</string>
    <string name="company_details_heading">Company Details</string>
    <string name="company_heading">Company</string>
    <string name="vat_heading">VAT</string>
    <string name="location_heading">Location</string>
    <string name="work_email_heading">Work email</string>
    <string name="update_btn_text">Update</string>
    <string name="cancel_btn_text">Cancel</string>
    <string name="edit_heading">Edit</string>
    <string name="admin_heading">Admin</string>
    <string name="help_heading">Help</string>
    <string name="logout_heading">Logout</string>
    <string name="search_heading">Search</string>
    <string name="favourites_heading">Favourites</string>
    <string name="unread_heading">Unread</string>
    <string name="view_all_heading">View all</string>
    <string name="project_heading">Project</string>
    <string name="delete_conversation_heading">Delete conversation</string>
    <string name="mark_unread_heading">Mark unread</string>
    <string name="mute_chat_heading">Mute chat</string>
    <string name="add_to_favourites_heading">Add to favourites</string>
    <string name="connections_heading">Connections</string>
    <string name="invite_btn_text">Invite</string>
    <string name="accept_all_heading">Accept all</string>
    <string name="decline_all_heading">Decline all</string>
    <string name="accept_btn_text">Accept</string>
    <string name="name_surname_text">\@name, surname</string>
    <string name="common_text_permission">needs the following permissions to continue</string>
    <string name="open_setting">OPEN SETTINGS</string>
    <string name="common_text_allow">Allow</string>
    <string name="common_text_deny">Deny</string>
    <string name="message_gallery_permission_denied">External Storage permissions is needed to select Image. Please turn on requested permissions from Settings > Permissions.</string>
    <string name="message_camera_permission_denied">Camera and Storage permissions are needed to capture image. Turning off any permission won\'t allow application run smoothly. Please turn on all requested permissions from Settings > Permissions.</string>
    <string name="common_text_permissions_denied">This app may not work correctly without the requested permissions.</string>
    <string name="screen_edit_profile_text_choose_file">Update Profile Photo</string>
    <string name="files_access_denied">You don\'t have file access, please allow camera and storage permissions</string>
    <string name="chat_heading">Group Chat</string>
    <string name="title_heading">Title</string>
    <string name="enter_chat_title_description">Enter chat title</string>
    <string name="chat_with_heading">Chat with</string>
    <string name="please_select_a_project_description">Please select a project</string>
    <string name="type_name_company_or_group_description">Type name, company or group</string>
    <string name="draft_heading">Draft</string>
    <string name="due_date_heading">Due date</string>
    <string name="owner_heading">Owner</string>
    <string name="view_map_heading">View map</string>
    <string name="confirmer_heading">Confirmer</string>
    <string name="verification_code_text">Verification code</string>
    <string name="didn_t_receive_code">Didn\'t receive code?</string>
    <string name="send_again_text">Send again</string>
    <string name="phone_confirmation">Phone confirmation</string>
    <string name="confirmation_code_sent_to_your_phone">Confirmation code sent to your phone</string>
    <string name="feedback_title_estonian">Siit saad minna tagasiside vormile.</string>
    <string name="feedback_form_btn_estonian">Eesti keele vorm</string>
    <string name="feedback_title_english">You can go to the feedback form here.</string>
    <string name="feedback_form_btn_english">English form</string>
    <string name="add_new_drawings">Add new drawing</string>
    <string name="delete_drawing">Delete drawing</string>
    <string name="share_group">Share group</string>
    <string name="public_group">Public group</string>
    <string name="download">Download</string>
    <string name="share">Share</string>
    <string name="go_to_file_location">Go to file location</string>
    <string name="all">All</string>
    <string name="apply">Apply</string>
    <string name="creator">Creator</string>
    <string name="viewer">Viewer</string>
    <string name="assignee">Assignee</string>
    <string name="to_review">To Review</string>
    <string name="pending">Pending</string>
</resources>