<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/headingText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_13sdp"
                android:layout_marginTop="@dimen/_12sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_12sdp"
                android:ellipsize="end"
                android:fontFamily="@font/inter_bold"
                android:maxLines="1"
                android:text="@string/phone_confirmation"
                android:textColor="@color/black"
                android:textSize="17sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/cancelBtn"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/cancelBtn"
                android:layout_width="wrap_content"
                android:layout_height="33dp"
                android:layout_marginEnd="@dimen/_11sdp"
                android:background="@drawable/cancel_button"
                android:fontFamily="@font/inter_medium"
                android:text="@string/cancel_btn_text"
                android:textAllCaps="false"
                android:textColor="@color/appRed"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="@+id/headingText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/headingText" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/appLightGrey"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_13sdp"
            android:layout_marginTop="@dimen/_9sdp"
            android:layout_marginEnd="@dimen/_13sdp"
            android:fontFamily="@font/inter_regular"
            android:text="@string/confirmation_code_sent_to_your_phone"
            android:maxLines="2"
            android:ellipsize="end"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/header" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/otpField"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginTop="@dimen/_14sdp"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginEnd="@dimen/_12sdp"
            android:background="@drawable/input_field_rectangle"
            android:ems="10"
            android:fontFamily="@font/inter_regular"
            android:hint="@string/verification_code_text"
            android:inputType="textVisiblePassword"
            android:paddingStart="14dp"
            android:paddingEnd="14dp"
            android:textColor="@color/black"
            android:textColorHint="@color/appGrey"
            android:textSize="15.5sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/description" />

        <LinearLayout
            android:id="@+id/resendLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_3sdp"
            android:orientation="horizontal"
            android:padding="1dp"
            app:layout_constraintEnd_toEndOf="@+id/otpField"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/otpField"
            app:layout_constraintTop_toBottomOf="@+id/otpField">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_regular"
                android:text="@string/didn_t_receive_code"
                android:textColor="@color/black"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/sendCodeAgainBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:background="?attr/selectableItemBackground"
                android:fontFamily="@font/inter_medium"
                android:padding="3.5dp"
                android:text="@string/send_again_text"
                android:textColor="@color/appBlue"
                android:textSize="14sp" />
        </LinearLayout>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/confirmBtn"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginTop="@dimen/_26sdp"
            android:layout_marginBottom="@dimen/_17sdp"
            android:background="@drawable/signin_button_back"
            android:fontFamily="@font/inter_medium"
            android:paddingStart="40dp"
            android:paddingEnd="40dp"
            android:text="@string/confirm"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/otpField"
            app:layout_constraintStart_toStartOf="@+id/otpField"
            app:layout_constraintTop_toBottomOf="@+id/resendLayout" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>