<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/transparent">

    <data>

        <import type="android.view.View" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/_8sdp">

        <LinearLayout
            android:id="@+id/llSelectionType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <View
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_3sdp"
                android:layout_gravity="center"
                android:background="@drawable/round_grey"
                android:backgroundTint="@color/black_01" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/rbAll"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/_2sdp"
                    android:text="@string/all"
                    android:textColor="@color/black" />

                <RadioButton
                    android:id="@+id/chToReview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/_2sdp"
                    android:text="@string/to_review"
                    android:textColor="@color/black" />

                <RadioButton
                    android:id="@+id/chInReview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/_2sdp"
                    android:text="@string/pending"
                    android:textColor="@color/black" />

            </RadioGroup>

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>