<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="130dp"
    android:layout_height="wrap_content"
    android:background="@drawable/task_card_less_corner_outline"
    android:backgroundTint="@color/white"
    android:elevation="@dimen/_4sdp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/_1sdp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvFileLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_semibold"
            android:gravity="start"
            android:paddingVertical="@dimen/_7sdp"
            android:paddingStart="@dimen/_7sdp"
            android:text="@string/go_to_file_location"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tvShare"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_3sdp"
            android:drawablePadding="@dimen/_5sdp"
            android:fontFamily="@font/inter_semibold"
            android:gravity="center"
            android:paddingHorizontal="@dimen/_7sdp"
            android:paddingVertical="@dimen/_7sdp"
            android:text="@string/share"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tvDownload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_3sdp"
            android:drawablePadding="@dimen/_5sdp"
            android:fontFamily="@font/inter_semibold"
            android:gravity="center"
            android:visibility="gone"
            android:paddingHorizontal="@dimen/_7sdp"
            android:paddingVertical="@dimen/_7sdp"
            android:text="@string/download"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="12sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
